[gd_scene load_steps=3 format=3 uid="uid://b7xj4m5n8k2qp"]

[ext_resource type="Script" path="res://scripts/screens/CareerIntroScreen.gd" id="1_7n8kw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_all = 2
border_color = Color(0.2, 0.4, 0.2, 1)
corner_radius_all = 10

[node name="CareerIntroScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7n8kw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.05, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MainTitle" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
text = "‚öΩ CAREER MODE"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="SubTitle" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Select Your Save Slot"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="SlotsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="Slot1Panel" type="Panel" parent="VBoxContainer/SlotsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SlotsContainer/Slot1Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotLabel" type="Label" parent="VBoxContainer/SlotsContainer/Slot1Panel/VBoxContainer"]
layout_mode = 2
text = "SLOT 1"
theme_override_colors/font_color = Color(0.5, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/SlotsContainer/Slot1Panel/VBoxContainer"]
layout_mode = 2

[node name="Slot1InfoContainer" type="VBoxContainer" parent="VBoxContainer/SlotsContainer/Slot1Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Slot1LoadButton" type="Button" parent="VBoxContainer/SlotsContainer/Slot1Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
custom_minimum_size = Vector2(0, 60)
text = "üÜï NEW GAME"
theme_override_font_sizes/font_size = 20

[node name="Slot1DeleteButton" type="Button" parent="VBoxContainer/SlotsContainer/Slot1Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
visible = false
custom_minimum_size = Vector2(0, 40)
text = "üóëÔ∏è DELETE"
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14

[node name="Slot2Panel" type="Panel" parent="VBoxContainer/SlotsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 350)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SlotsContainer/Slot2Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotLabel" type="Label" parent="VBoxContainer/SlotsContainer/Slot2Panel/VBoxContainer"]
layout_mode = 2
text = "SLOT 2"
theme_override_colors/font_color = Color(0.5, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/SlotsContainer/Slot2Panel/VBoxContainer"]
layout_mode = 2

[node name="Slot2InfoContainer" type="VBoxContainer" parent="VBoxContainer/SlotsContainer/Slot2Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Slot2LoadButton" type="Button" parent="VBoxContainer/SlotsContainer/Slot2Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
custom_minimum_size = Vector2(0, 60)
text = "üÜï NEW GAME"
theme_override_font_sizes/font_size = 20

[node name="Slot2DeleteButton" type="Button" parent="VBoxContainer/SlotsContainer/Slot2Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
visible = false
custom_minimum_size = Vector2(0, 40)
text = "üóëÔ∏è DELETE"
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(150, 50)
text = "‚Üê BACK"
theme_override_font_sizes/font_size = 18