extends Control
class_name CareerIntroScreen

# ============================================================================
# ìœ¡ì„± ê²Œì„ ì¸íŠ¸ë¡œ í™”ë©´ - ìŠ¬ë¡¯ ì„ íƒ ì‹œìŠ¤í…œ
# ìš°ë§ˆë¬´ìŠ¤ë©” ìŠ¤íƒ€ì¼ ì„¸ì´ë¸Œ ìŠ¬ë¡¯ ê´€ë¦¬
# ============================================================================

# ì”¬ ê²½ë¡œ
const TEAM_CREATION_SCENE = "res://scenes/TeamCreation.tscn"
const CHARACTER_CREATION_SCENE = "res://scenes/CharacterCreation.tscn"
const HOME_IMPROVED_SCENE = "res://scenes/HomeImproved.tscn"
const MAIN_HOME_SCENE = "res://scenes/HomeImproved.tscn"

# ìŠ¬ë¡¯ ë°ì´í„° êµ¬ì¡°
var slot_data = {"slot1": null, "slot2": null}  # SaveData ë˜ëŠ” null  # SaveData ë˜ëŠ” null

# UI ìš”ì†Œë“¤ (%UniqueNodeName íŒ¨í„´ ì‚¬ìš©)
@onready var slot1_panel: Panel = %Slot1Panel
@onready var slot2_panel: Panel = %Slot2Panel

@onready var slot1_button: Button = %Slot1LoadButton
@onready var slot2_button: Button = %Slot2LoadButton

@onready var slot1_delete: Button = %Slot1DeleteButton
@onready var slot2_delete: Button = %Slot2DeleteButton

@onready var slot1_info: VBoxContainer = %Slot1InfoContainer
@onready var slot2_info: VBoxContainer = %Slot2InfoContainer

@onready var back_button: Button = %BackButton

# ìƒ‰ìƒ í…Œë§ˆ
const SLOT_EMPTY_COLOR = Color(0.2, 0.2, 0.2, 0.8)
const SLOT_FILLED_COLOR = Color(0.1, 0.3, 0.1, 0.9)
const SLOT_HOVER_COLOR = Color(0.2, 0.4, 0.2, 1.0)
const DELETE_COLOR = Color(0.8, 0.2, 0.2, 1.0)

# ============================================================================
# ì´ˆê¸°í™”
# ============================================================================


func _ready():
	print("[CareerIntroScreen] Initializing career intro screen...")

	# ìŠ¬ë¡¯ ë°ì´í„° ë¡œë“œ
	_load_slot_data()

	# UI ì´ˆê¸°í™”
	_setup_ui()

	# ë²„íŠ¼ ì—°ê²°
	_connect_buttons()

	# ì§„ì… ì• ë‹ˆë©”ì´ì…˜
	_play_entrance_animation()


func _load_slot_data():
	"""Load slot data from SaveManager"""
	# SaveManagerë¥¼ ì‚¬ìš©
	if has_node("/root/SaveManager"):
		var save_manager = get_node("/root/SaveManager")
		var slots = save_manager.get_save_slots()

		# Slot 0ê³¼ 1ë§Œ ì‚¬ìš© (2ê°œ ìŠ¬ë¡¯)
		if slots.has("slot_0") and slots["slot_0"].get("exists", false):
			slot_data["slot1"] = slots["slot_0"]
		else:
			slot_data["slot1"] = null

		if slots.has("slot_1") and slots["slot_1"].get("exists", false):
			slot_data["slot2"] = slots["slot_1"]
		else:
			slot_data["slot2"] = null

		print("[CareerIntroScreen] Loaded save slots: ", slot_data)
	else:
		print("[CareerIntroScreen] SaveManager not found, creating dummy data")


func _setup_ui():
	"""UI ìš”ì†Œ ì´ˆê¸°í™” ë° í‘œì‹œ"""
	_update_slot_display(1)
	_update_slot_display(2)


func _update_slot_display(slot_number: int):
	"""ìŠ¬ë¡¯ í‘œì‹œ ì—…ë°ì´íŠ¸"""
	var panel = slot1_panel if slot_number == 1 else slot2_panel
	var button = slot1_button if slot_number == 1 else slot2_button
	var delete_btn = slot1_delete if slot_number == 1 else slot2_delete
	var info = slot1_info if slot_number == 1 else slot2_info
	var data = slot_data["slot" + str(slot_number)]

	if not panel or not button:
		print("[CareerIntroScreen] Warning: Slot UI elements not found for slot ", slot_number)
		return

	if data == null:
		# ë¹ˆ ìŠ¬ë¡¯
		button.text = "ğŸ†• NEW GAME"
		button.modulate = Color.WHITE
		if delete_btn:
			delete_btn.visible = false
		if info:
			info.visible = false

		# íŒ¨ë„ ìŠ¤íƒ€ì¼
		var style = StyleBoxFlat.new()
		style.bg_color = SLOT_EMPTY_COLOR
		style.set_border_width_all(2)
		style.border_color = Color(0.3, 0.3, 0.3, 1.0)
		style.set_corner_radius_all(10)
		panel.add_theme_stylebox_override("panel", style)
	else:
		# ë°ì´í„°ê°€ ìˆëŠ” ìŠ¬ë¡¯
		button.text = "â–¶ï¸ CONTINUE"
		button.modulate = Color(0.8, 1.0, 0.8, 1.0)
		if delete_btn:
			delete_btn.visible = true

		# ìŠ¬ë¡¯ ì •ë³´ í‘œì‹œ
		if info:
			info.visible = true
			_display_save_info(info, data)

		# íŒ¨ë„ ìŠ¤íƒ€ì¼
		var style = StyleBoxFlat.new()
		style.bg_color = SLOT_FILLED_COLOR
		style.set_border_width_all(2)
		style.border_color = Color(0.2, 0.5, 0.2, 1.0)
		style.set_corner_radius_all(10)
		panel.add_theme_stylebox_override("panel", style)


func _display_save_info(info_container: VBoxContainer, save_data: Dictionary):
	"""ì„¸ì´ë¸Œ ë°ì´í„° ì •ë³´ í‘œì‹œ"""
	# ê¸°ì¡´ ìì‹ ì œê±°
	for child in info_container.get_children():
		child.queue_free()

	# Player name
	var name_label = Label.new()
	name_label.text = "âš½ " + str(save_data.get("player_name", "Unknown Player"))
	name_label.add_theme_font_size_override("font_size", 18)
	info_container.add_child(name_label)

	# Progress
	var progress_label = Label.new()
	var year = save_data.get("current_year", 1)
	var week = save_data.get("current_week", 1)
	progress_label.text = "ğŸ“… Year %d Week %d" % [year, week]
	progress_label.add_theme_font_size_override("font_size", 14)
	progress_label.modulate = Color(0.8, 0.8, 0.8, 1.0)
	info_container.add_child(progress_label)

	# Stats
	var ca_label = Label.new()
	var ca = save_data.get("current_ability", 50)
	var pa = save_data.get("potential_ability", 80)
	ca_label.text = "ğŸ’ª CA: %d / PA: %d" % [ca, pa]
	ca_label.add_theme_font_size_override("font_size", 14)
	ca_label.modulate = Color(0.8, 0.8, 0.8, 1.0)
	info_container.add_child(ca_label)

	# Save time
	var time_label = Label.new()
	var save_time = save_data.get("save_time", "Unknown")
	time_label.text = "ğŸ’¾ " + save_time
	time_label.add_theme_font_size_override("font_size", 12)
	time_label.modulate = Color(0.6, 0.6, 0.6, 1.0)
	info_container.add_child(time_label)


func _connect_buttons():
	"""ë²„íŠ¼ ì´ë²¤íŠ¸ ì—°ê²°"""
	if slot1_button:
		slot1_button.pressed.connect(func(): _on_slot_pressed(1))
		slot1_button.mouse_entered.connect(func(): _on_slot_hover(1, true))
		slot1_button.mouse_exited.connect(func(): _on_slot_hover(1, false))

	if slot2_button:
		slot2_button.pressed.connect(func(): _on_slot_pressed(2))
		slot2_button.mouse_entered.connect(func(): _on_slot_hover(2, true))
		slot2_button.mouse_exited.connect(func(): _on_slot_hover(2, false))

	if slot1_delete:
		slot1_delete.pressed.connect(func(): _on_delete_pressed(1))

	if slot2_delete:
		slot2_delete.pressed.connect(func(): _on_delete_pressed(2))

	if back_button:
		back_button.pressed.connect(_on_back_pressed)


# ============================================================================
# ë²„íŠ¼ í•¸ë“¤ëŸ¬
# ============================================================================


func _on_slot_pressed(slot_number: int):
	"""ìŠ¬ë¡¯ ì„ íƒ ì²˜ë¦¬"""
	print("[CareerIntroScreen] ========================================")
	print("[CareerIntroScreen] _on_slot_pressed called! slot_number = ", slot_number)
	var data = slot_data["slot" + str(slot_number)]
	print("[CareerIntroScreen] slot_data = ", data)

	if data == null:
		# ìƒˆ ê²Œì„ ì‹œì‘ - Initial Setup Flow (ìŠ¤í™ 11.1)
		# 1. íŒ€ ì°½ë‹¨ â†’ 2. ìºë¦­í„° ìƒì„± ìˆœì„œ
		print("[CareerIntroScreen] ğŸ® Starting new game in slot ", slot_number)

		# Save current slot number
		if has_node("/root/SaveManager"):
			var save_manager = get_node("/root/SaveManager")
			save_manager.current_save_slot = "slot_%d" % (slot_number - 1)
			print("[CareerIntroScreen] âœ… Saved to SaveManager")
		else:
			print("[CareerIntroScreen] âš ï¸ SaveManager not found")

		# íŒ€ ì°½ë‹¨ í™”ë©´ìœ¼ë¡œ ì´ë™ (Initial Setup Flow)
		print("[CareerIntroScreen] ğŸŸï¸ Going to Team Creation first...")
		print("[CareerIntroScreen] TEAM_CREATION_SCENE = ", TEAM_CREATION_SCENE)
		_transition_to_scene(TEAM_CREATION_SCENE)
	else:
		# ê¸°ì¡´ ê²Œì„ ë¡œë“œ
		print("[CareerIntroScreen] ğŸ“‚ Loading game from slot ", slot_number)

		# Load save data
		if has_node("/root/SaveManager"):
			var save_manager = get_node("/root/SaveManager")
			var slot_id = "slot_%d" % (slot_number - 1)  # slot_0 or slot_1

			# âœ… í˜„ì¬ ìŠ¬ë¡¯ ì„¤ì • (ì €ì¥ ì‹œ í•„ìš”)
			save_manager.current_save_slot = slot_id
			print("[CareerIntroScreen] âœ… Set current_save_slot to: ", slot_id)

			var loaded_data = save_manager.load_game(slot_id)

			if loaded_data and loaded_data.has("character_data"):
				# âœ… MyTeamManagerì— ë¡œë“œëœ ìºë¦­í„° ë°ì´í„° ì ìš©
				if has_node("/root/MyTeamManager"):
					var team_manager = get_node("/root/MyTeamManager")
					team_manager.main_character = loaded_data["character_data"]
					print("[CareerIntroScreen] âœ… Loaded character to MyTeamManager")

				# Apply other loaded data to PlayerData if available
				if has_node("/root/PlayerData"):
					var player_data = get_node("/root/PlayerData")
					for key in loaded_data:
						if key in player_data:
							player_data.set(key, loaded_data[key])
					print("[CareerIntroScreen] âœ… Loaded data to PlayerData")
			else:
				print("[CareerIntroScreen] âš ï¸ No character_data found in save file")

		# ìœ¡ì„± í™ˆìœ¼ë¡œ ì´ë™
		_transition_to_scene(HOME_IMPROVED_SCENE)


func _on_delete_pressed(slot_number: int):
	"""ìŠ¬ë¡¯ ì‚­ì œ ì²˜ë¦¬"""
	var data = slot_data["slot" + str(slot_number)]
	if data == null:
		return  # ë¹ˆ ìŠ¬ë¡¯ì€ ì‚­ì œí•  ìˆ˜ ì—†ìŒ

	# í™•ì¸ íŒì—… í‘œì‹œ
	_show_delete_confirmation(slot_number)


func _show_delete_confirmation(slot_number: int):
	"""ì‚­ì œ í™•ì¸ íŒì—…"""
	var dialog = ConfirmationDialog.new()
	dialog.title = "Delete Save"
	dialog.dialog_text = ("Delete save data in Slot %d?\n\nâš ï¸ This action cannot be undone!" % slot_number)

	# íŒì—… ìŠ¤íƒ€ì¼ë§
	dialog.add_theme_font_size_override("title_font_size", 20)

	add_child(dialog)
	dialog.popup_centered(Vector2(400, 200))

	# í™•ì¸ ì‹œ ì‚­ì œ ì‹¤í–‰
	dialog.confirmed.connect(
		func():
			_delete_slot(slot_number)
			dialog.queue_free()
	)

	# ì·¨ì†Œ ì‹œ ê·¸ëƒ¥ ë‹«ê¸°
	dialog.canceled.connect(func(): dialog.queue_free())


func _delete_slot(slot_number: int):
	"""ìŠ¬ë¡¯ ë°ì´í„° ì‚­ì œ"""
	print("[CareerIntroScreen] Deleting slot ", slot_number)

	# Delete through SaveManager
	if has_node("/root/SaveManager"):
		var save_manager = get_node("/root/SaveManager")
		var slot_id = "slot_%d" % (slot_number - 1)  # slot_0 or slot_1
		save_manager.delete_save(slot_id)

	# ë¡œì»¬ ë°ì´í„° ì—…ë°ì´íŠ¸
	slot_data["slot" + str(slot_number)] = null

	# UI ì—…ë°ì´íŠ¸
	_update_slot_display(slot_number)

	# ì‚­ì œ ì™„ë£Œ íš¨ê³¼
	_play_delete_effect(slot_number)


func _on_slot_hover(slot_number: int, is_hovering: bool):
	"""ìŠ¬ë¡¯ í˜¸ë²„ íš¨ê³¼"""
	var panel = slot1_panel if slot_number == 1 else slot2_panel
	if not panel:
		return

	var style = panel.get_theme_stylebox("panel")
	if style and style is StyleBoxFlat:
		if is_hovering:
			style.bg_color = style.bg_color.lerp(SLOT_HOVER_COLOR, 0.3)
		else:
			# ì›ë˜ ìƒ‰ìƒìœ¼ë¡œ ë³µêµ¬
			var data = slot_data["slot" + str(slot_number)]
			style.bg_color = SLOT_FILLED_COLOR if data else SLOT_EMPTY_COLOR


func _on_back_pressed():
	"""ë’¤ë¡œê°€ê¸° - ë©”ì¸ í™ˆìœ¼ë¡œ"""
	print("[CareerIntroScreen] Returning to main home...")
	_transition_to_scene(MAIN_HOME_SCENE)


# ============================================================================
# ì• ë‹ˆë©”ì´ì…˜ ë° íš¨ê³¼
# ============================================================================


func _play_entrance_animation():
	"""ì§„ì… ì• ë‹ˆë©”ì´ì…˜"""
	modulate.a = 0
	var tween = get_tree().create_tween()
	tween.tween_property(self, "modulate:a", 1.0, 0.3)


func _play_delete_effect(slot_number: int):
	"""ì‚­ì œ íš¨ê³¼ ì• ë‹ˆë©”ì´ì…˜"""
	var panel = slot1_panel if slot_number == 1 else slot2_panel
	if not panel:
		return

	var tween = get_tree().create_tween()
	tween.tween_property(panel, "modulate", Color(1, 0.3, 0.3, 1), 0.1)
	tween.tween_property(panel, "modulate", Color.WHITE, 0.2)

	# ì‚­ì œ ì™„ë£Œ ë©”ì‹œì§€
	_show_toast("Slot %d deleted" % slot_number)


func _show_toast(message: String):
	"""ê°„ë‹¨í•œ í† ìŠ¤íŠ¸ ë©”ì‹œì§€"""
	var toast = Label.new()
	toast.text = message
	toast.add_theme_font_size_override("font_size", 16)
	toast.modulate = Color(1, 1, 1, 0)

	# ì¤‘ì•™ ìƒë‹¨ì— ìœ„ì¹˜
	toast.set_anchors_preset(Control.PRESET_CENTER_TOP)
	toast.position.y = 50

	add_child(toast)

	# í˜ì´ë“œ ì¸/ì•„ì›ƒ
	var tween = get_tree().create_tween()
	tween.tween_property(toast, "modulate:a", 1.0, 0.2)
	tween.tween_property(toast, "modulate:a", 1.0, 1.0)  # ìœ ì§€
	tween.tween_property(toast, "modulate:a", 0.0, 0.3)
	tween.tween_callback(toast.queue_free)


func _transition_to_scene(scene_path: String):
	"""ì”¬ ì „í™˜"""
	print("[CareerIntroScreen] _transition_to_scene called with: ", scene_path)
	print("[CareerIntroScreen] Creating tween for fade out...")
	var tween = get_tree().create_tween()
	tween.tween_property(self, "modulate:a", 0.0, 0.3)
	tween.tween_callback(
		func():
			print("[CareerIntroScreen] Tween finished, changing scene...")
			var result = get_tree().change_scene_to_file(scene_path)
			print("[CareerIntroScreen] Scene change result: ", result)
			if result != OK:
				print("[CareerIntroScreen] âŒ ERROR: Scene change failed! Error code: ", result)
	)
